update:set version to 1.0.0